<resources>
    <string name="app_name">Fingo</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password should be minimum 6 characters!</string>
    <string name="auth_failed">Check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="reset_email">Send Password reset email</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">Not a member? Get registered to Fingo!</string>
    <string name="btn_link_to_login">Already registered? Login in now!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_information">Information</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="settings">Settings</string>
    <string name="title_activity_profile">Profile</string>
    <string name="university">Enter University</string>
    <string name="editprofile">Edit Profile</string>
    <string name="hint_age">Age</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_occupation">Occupation</string>
    <string name="hint_university">University</string>
    <string name="set_age">Set Age</string>
    <string name="set_gender">Set Gender</string>
    <string name="set_occupation">Set Occupation</string>
    <string name="set_university">My University</string>
    <string name="age">Age</string>
    <string name="set_name">Display Name</string>
    <string name="set_fullname">Set Fullname</string>
    <string name="display_name">Displaying Name</string>
    <string name="set_displayname">Set Display Name</string>
    <string name="hint_display">Display Name</string>
    <string name="user_name">Username</string>
    <string name="set_username">Set Username</string>
    <string name="hint_username">Username</string>
    <string name="btn_pick_plc">Pick A Place</string>
    <string name="undefinedPrice">Price level not defined</string>
    <string name="hint_hobbies">Enter your hobbies word by word</string>
    <string name="set_hobbies">Add Hobby</string>
    <string name="add_hobby">Set Hobbies</string>
    <string name="place_activity">Pick a Place</string>
    <string name="edit_profile">Edit Profile Info</string>
    <string name="profile">Fingo Profile</string>
    <string name="no_hobbies">You don\'t have any hobbies :(</string>
    <string name="find_a_place_to_go">Find a Place to Go</string>
    <string name="user_no_hobbies">No hobbies for this user</string>
    <string name="enter_email">Enter your registered email!</string>
    <string name="reset_info">Link will be sent to your email!</string>

    <string name="facebook_app_id">YOUR_APP_ID</string>
    <string name="fb_login_protocol_scheme">fb1881414678765032</string>

    <string name="btn_directions">Get Directions</string>
    <string name="see_who_is_here">See who is here?</string>

    <string name="font_family_roboto_light">sans-serif-thin</string>
    <string name="type_a_message">Type a message...</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="cancel">Cancel</string>

    <string name="loading">Loading</string>
    <string name="please_wait">Please wait...</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="profile_type">Set Profile Type</string>
</resources>
