<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimaryDark"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextColor="@color/colorPrimary" />
    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:gravity="center"
                    android:text="@string/find_a_place_to_go"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="30sp" />

                <ImageView
                    android:id="@+id/placeImage"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textView" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/placeImage"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/placeRating"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_weight="1"
                        android:background="@color/colorPrimaryDark"
                        android:ellipsize="none"
                        android:gravity="center_vertical"
                        android:maxLines="100"
                        android:paddingLeft="20dp"
                        android:scrollHorizontally="false"
                        android:text="Rating"
                        android:textColor="@color/white"
                        android:textSize="26sp"
                        android:textStyle="normal|bold" />

                    <CheckBox
                        android:id="@+id/checkInBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:freezesText="true"
                        android:text="I'm Here"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/placeAddress"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/placeRating"
                        android:layout_weight="1"
                        android:ellipsize="none"
                        android:gravity="center_vertical"
                        android:maxLines="100"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp"
                        android:scrollHorizontally="false"
                        android:text="Address"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/placeURI"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/placeType"
                        android:layout_weight="1"
                        android:autoLink="web"
                        android:ellipsize="none"
                        android:gravity="center_vertical"
                        android:linksClickable="true"
                        android:maxLines="100"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp"
                        android:scrollHorizontally="false"
                        android:text="Website"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/placePhone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/placePriceLevel"
                        android:layout_weight="1"
                        android:autoLink="phone"
                        android:ellipsize="none"
                        android:gravity="center_vertical"
                        android:linksClickable="true"
                        android:maxLines="100"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp"
                        android:scrollHorizontally="false"
                        android:text="Phone"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/placeStatus"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ellipsize="none"
                        android:gravity="center_vertical"
                        android:maxLines="100"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp"
                        android:scrollHorizontally="false"
                        android:text="Status"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/placePriceLevel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/placeAddress"
                        android:layout_weight="1"
                        android:ellipsize="none"
                        android:gravity="center_vertical"
                        android:maxLines="100"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp"
                        android:scrollHorizontally="false"
                        android:text="Price"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/placeType"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/placePhone"
                        android:layout_weight="1"
                        android:ellipsize="none"
                        android:fontFamily="sans-serif"
                        android:gravity="center_vertical"
                        android:maxLines="100"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp"
                        android:scrollHorizontally="false"
                        android:text="Type"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/seeUsersBtn"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dip"
                        android:background="@null"
                        android:text="@string/see_who_is_here"
                        android:textAllCaps="false"
                        android:textColor="@color/btn_logut_background"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/get_direction"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dip"
                        android:background="@null"
                        android:text="@string/btn_directions"
                        android:textAllCaps="false"
                        android:textColor="@color/light_green"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/placeReviewsTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="15dp"
                        android:text="Reviews"
                        android:textAlignment="center"
                        android:textSize="24sp" />

                    <ListView
                        android:id="@+id/reviewListView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:maxLines="100"
                        android:scrollHorizontally="false">

                    </ListView>

                    <TextView
                        android:id="@+id/usersTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingTop="15dp"
                        android:text="Users"
                        android:textAlignment="center"
                        android:textSize="24sp" />

                    <ListView
                        android:id="@+id/usersListView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:maxLines="100"
                        android:scrollHorizontally="false" />



                </LinearLayout>

            </LinearLayout>

        </ScrollView>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>


